Atualização da imagem de logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Pizzaria Bella Napoli</h1>
             <p>A autêntica pizza italiana em sua mesa</p>
             <div class="logo-container">
-                <img src="imagens/Logo.png" alt="Logo Bella Napoli" class="logo">
+                <img src="logo.png" alt="Logo Bella Napoli" class="logo">
             </div>
         </div>
     </header>
